--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
 DB_NAME=mastermind
 DB_PASS=mastermind
 DB_USER=mastermind
-DB_TYPE=mysql
+DB_TYPE=postgres
 DB_HOST=localhost
-DB_PORT=3306
-STORAGE_DIR=../mastermind-server/storage
+DB_PORT=5432
 AMQP_URL=amqp://guest:guest@localhost:5672/
-KAFKA_PEERS=192.168.0.45:9092
