--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_NAME=mastermind
-DB_PASS=mastermind
-DB_USER=mastermind
+DB_NAME=deploji
+DB_PASS=deploji
+DB_USER=deploji
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
