--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
+sonar.organization=deploji
 # must be unique in a given SonarQube instance
-sonar.projectKey=sotomskir_mastermind-worker
+sonar.projectKey=deploji-worker
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=mastermind-worker
+sonar.projectName=deploji-worker
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
